RESOLVED FIXED135234
[New Multicolumn] Assertion failure when an input element has multicolumn style
https://bugs.webkit.org/show_bug.cgi?id=135234
Summary [New Multicolumn] Assertion failure when an input element has multicolumn style
Mihnea Ovidenie
Reported 2014-07-24 02:49:55 PDT
Assertion failure when an input element has multicolumn style.
Attachments
Patch (3.57 KB, patch)
2014-07-24 03:24 PDT, Mihnea Ovidenie
no flags
Mihnea Ovidenie
Comment 1 2014-07-24 03:24:54 PDT
Andrei Bucur
Comment 2 2014-07-24 04:49:22 PDT
Comment on attachment 235422 [details] Patch r=me
WebKit Commit Bot
Comment 3 2014-07-24 05:23:23 PDT
Comment on attachment 235422 [details] Patch Clearing flags on attachment: 235422 Committed r171511: <http://trac.webkit.org/changeset/171511>
WebKit Commit Bot
Comment 4 2014-07-24 05:23:27 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.