[New Multicolumn] Assertion failure when an input element has multicolumn style https://bugs.webkit.org/show_bug.cgi?id=135234

Reviewed by Andrei Bucur.

Source/WebCore:
Restrict the assertion in RenderBlock::canComputeRegionRangeForBox
only to RenderNamedFlowThread objects since for RenderMultiColumnFlowThread
objects we can compute a range of regions during their parent block layout.

Test: fast/multicol/newmulticol/input-as-multicol.html

* rendering/RenderBlock.cpp:
(WebCore::canComputeRegionRangeForBox):

LayoutTests:
* fast/multicol/newmulticol/input-as-multicol-expected.txt: Added.
* fast/multicol/newmulticol/input-as-multicol.html: Added.


Canonical link: https://commits.webkit.org/153144@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@171511 268f45cc-cd09-0410-ab3c-d52691b4dbfc